:art:|:bug: fix menu in header overflow when mobile horizon.

--- a/frontend/src/assets/scss/layouts/header.scss
+++ b/frontend/src/assets/scss/layouts/header.scss
@@ -1,6 +1,12 @@
 @import 'color/main';
 @import 'ratio.scss';
 .header {
+  .header-container {
+    z-index: 50;
+    position: fixed;
+    left: 0;
+    right: 0;
+  }
   text-align: center;
   color: $white1;
   .menu {
@@ -79,29 +85,34 @@
 .header-menu,
 .header-fade {
   position: fixed;
-  top: $ratio-sm;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 10;
   display: none;
+  z-index: 10;
 }
 
 .header-menu {
   z-index: 20;
-  ul {
-    padding: 0px;
-    li {
-      margin: (30vh / 4) 0;
-      list-style-type: none;
+  padding: 10vh 0;
+  div {
+    // margin: (30vh / 4) 0;
+    height: 100%;
+    width: 100%;
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    a {
       transition: transform 0.3s cubic-bezier(.53, .49, .18, .97);
-      a {
-        position: relative;
-        font-size: 30px;
-        color: $dark2;
-        text-decoration: none;
-        opacity: 0;
-      }
+      position: relative;
+      font-size: 30px;
+      color: $dark2;
+      text-decoration: none;
+      opacity: 0;
       &:hover,
       &:focus {
         transform: translateY(-5px) scale(1.1);
